@@ -36,6 +36,7 @@ version 0.59 (06/07/2002):
 	* Plugged memory leaks in Jabber plug-in
 	* Fixed problem with Jabber away status not being propagated to
 	  conference rooms for jabberd (server) v1.4.2 and above
+	* Chat room buddy lists are now sorted independent of case
 
 version 0.58 (05/13/2002):
 	* Bulgarian translation added (Thanks, Igel Itzo)
